--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
-
+<center>
 <div id="mc_embed_signup">
 <form action="//insideoutproject.us12.list-manage.com/subscribe/post?u=a09828c5658c3f43e6fe230a0&amp;id=45eac13a68" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
@@ -41,7 +41,7 @@
     </div>
 </form>
 </div>
-
+</center>
 </body>
 
 <!--End mc_embed_signup-->
