alterando cor da fonte pra branco

--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
     </div>
 </form>
 </div>
+<footer>
+    <p> *2015 InsideOut Project Brasil* </p>
+</footer>
 </center>
+
+
 </body>
 
 <!--End mc_embed_signup-->
