alterando título da página

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div id="mc_embed_signup">
 <form action="//insideoutproject.us12.list-manage.com/subscribe/post?u=a09828c5658c3f43e6fe230a0&amp;id=45eac13a68" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	<h2>Inscreva-se na nossa Lista de E-mails o/</h2>
+	<h1>Lista de E-mails do InsideOut o/</h1>
         <h3>Quer saber novidades sobre Mulheres em Tecnologia, eventos no Rio de Janeiro ou até mesmo ser convocada para palestrar? É só fazer parte da nossa lista!</h3>
 <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
 <div class="mc-field-group">
