Inclui header e footer vermelhos e centraliza conteúdo.

--- a/index.html
+++ b/index.html
@@ -6,40 +6,43 @@
     <title>InsideOut Project Brasil Newsletter</title>
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 </head>
 <body>
+<header>
+    <h1>Lista de e-mails do InsideOut o/</h1>
+</header>
+<section id="main">
+    <h3>Quer saber novidades sobre Mulheres em Tecnologia, eventos no Rio de Janeiro ou até mesmo ser convocada para palestrar? É só fazer parte da nossa lista!</h3>
 
-<h1>Lista de E-mails do InsideOut o/</h1>
-<h3>Quer saber novidades sobre Mulheres em Tecnologia, eventos no Rio de Janeiro ou até mesmo ser convocada para palestrar? É só fazer parte da nossa lista!</h3>
+    <center>
+    <div id="mc_embed_signup">
+    <form class="pure-form pure-form-stacked" action="http://insideoutproject.us12.list-manage.com/subscribe/post?u=a09828c5658c3f43e6fe230a0&amp;id=45eac13a68" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 
-<center>
-<div id="mc_embed_signup">
-<form class="pure-form pure-form-stacked" action="http://insideoutproject.us12.list-manage.com/subscribe/post?u=a09828c5658c3f43e6fe230a0&amp;id=45eac13a68" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-
-    <fieldset>
-        <div class="pure-control-group">
-        	<label for="mce-EMAIL">E-mail  <span class="asterisk">*</span>
-    	    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL"  required="required" />
+        <fieldset>
+            <div class="pure-control-group">
+                <label for="mce-EMAIL">E-mail<span class="asterisk">*</span>
+                <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL"  required="required" />
+            </div>
+            <div class="pure-control-group">
+                <label for="mce-FNAME">Primeiro Nome</label>
+                <input type="text" value="" name="FNAME" class="" id="mce-FNAME" />
+            </div>
+            <div class="pure-control-group">
+                <label for="mce-LNAME">Último Nome</label>
+                <input type="text" value="" name="LNAME" class="" id="mce-LNAME" />
+            </div>
+            <div id="mce-responses" class="clear">
+                <div class="response" id="mce-error-response" style="display:none"></div>
+                <div class="response" id="mce-success-response" style="display:none"></div>
+            </div>
+            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a09828c5658c3f43e6fe230a0_45eac13a68" tabindex="-1" value=""></div>
+            <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="pure-button">QUERO!</button>
         </div>
-        <div class="pure-control-group">
-            <label for="mce-FNAME">Primeiro Nome </label>
-            <input type="text" value="" name="FNAME" class="" id="mce-FNAME" />
-        </div>
-        <div class="pure-control-group">
-            <label for="mce-LNAME">Último Nome </label>
-            <input type="text" value="" name="LNAME" class="" id="mce-LNAME" />
-        </div>
-    	<div id="mce-responses" class="clear">
-    		<div class="response" id="mce-error-response" style="display:none"></div>
-    		<div class="response" id="mce-success-response" style="display:none"></div>
-    	</div>
-        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a09828c5658c3f43e6fe230a0_45eac13a68" tabindex="-1" value=""></div>
-        <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="pure-button">QUERO!</button>
+    </form>
     </div>
-</form>
-</div>
+</section>
 <footer>
     <p> © 2015-2016 InsideOut Project Brasil </p>
 </footer>
